<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/register"
    tools:context=".Register_Page"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="124dp"
    tools:showIn="@layout/activity_register_page">

    <Button
        android:id="@+id/btn_back"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/btnsignin"
        android:drawableStart="@mipmap/round_arrow_back_black_24"
        android:paddingStart="13dp"
        android:paddingEnd="13dp"
        android:text="@string/back"
        android:textAlignment="textEnd"
        android:textColor="@color/colorBlack"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtwelcome2"
        android:layout_width="169dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/welcome_to"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtregister"
        android:layout_width="194dp"
        android:layout_height="59dp"
        android:layout_marginTop="16dp"
        android:text="@string/register"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="@+id/txtwelcome2"
        app:layout_constraintHorizontal_bias="0.48"
        app:layout_constraintStart_toStartOf="@+id/txtwelcome2"
        app:layout_constraintTop_toBottomOf="@+id/txtwelcome2" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_Fullname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="220dp"
        android:textColorHint="@color/colorBlack"
        android:layout_marginRight="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/textfield"
            android:drawablePadding="10dp"
            android:hint="@string/enter_full_name"
            android:inputType="textPersonName"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHint="@color/pureGray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="32dp"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Fullname">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/textfield"
            android:drawablePadding="10dp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/Red"
            android:textColorHint="@color/pureGray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="32dp"
        android:textColorHint="@color/colorBlack"
        app:passwordToggleEnabled="true"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/textfield"
            android:drawablePadding="10dp"
            android:hint="@string/enter_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/Red"
            android:textColorHint="@color/pureGray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_repassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="32dp"
        app:passwordToggleEnabled="true"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/textfield"
            android:drawablePadding="10dp"
            android:hint="@string/re_enter_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="15dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/Red"
            android:textColorHint="@color/pureGray" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/et_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginRight="32dp"
        android:textColorHint="@color/colorBlack"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_repassword">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@drawable/textfield"
            android:drawablePadding="10dp"
            android:hint="@string/enter_phone_number"
            android:inputType="phone"
            android:maxLength="10"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:singleLine="true"
            android:textColor="@color/colorBlack"
            android:textColorHighlight="@color/Red"
            android:textColorHint="@color/pureGray" />
    </com.google.android.material.textfield.TextInputLayout>

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.487"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone">


        <TextView
            android:id="@+id/txtgender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="30dp"
            android:padding="5dp"
            android:text="@string/gender"
            android:textColor="@color/colorBlack"
            android:textSize="24sp"
            android:textStyle="normal"
            tools:layout_editor_absoluteX="132dp"
            tools:layout_editor_absoluteY="600dp" />

        <RadioButton
            android:id="@+id/rdMale"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/male"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="256dp"
            tools:layout_editor_absoluteY="591dp">

        </RadioButton>

        <RadioButton
            android:id="@+id/rdFemale"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/female"
            android:padding="5dp"
            android:layout_margin="5dp"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="350dp"
            tools:layout_editor_absoluteY="591dp">

        </RadioButton>
    </RadioGroup>

    <Button
        android:id="@+id/btn_registeruser"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/btnsignin"
        android:text="@string/register"
        android:textColor="@color/BtnBlueLeft"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radiogroup"
        app:layout_constraintVertical_bias="0.0" />


</androidx.constraintlayout.widget.ConstraintLayout>